aks/persistence/templates/persistence-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: persistence-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
    - port:
        number: 81
        name: http
        protocol: HTTP
      hosts:
        - "vtch-aks-demo.duckdns.org"
      tls:
        httpsRedirect: true # sends 301 redirect for http requests
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: main-cert # must be the same as secret
      hosts:
        - "vtch-aks-demo.duckdns.org"
