aks/persistence/templates/persistence-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: persistence
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - application-gateway
  http:
    - match:
        - uri:
            prefix: /api/v1/messages
      route:
        - destination:
            port:
              number: 8081
            host: persistence
